// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`дрэг энд дроп лимитирует новый индекс размером страницы 1`] = `
Array [
  "Active",
  "Ambition",
  "Laurin & Klement",
  "Hockey Edition",
]
`;

exports[`дрэг энд дроп при дропе изменить сортировку комплектаций 1`] = `
Array [
  "Active",
  "Ambition",
  "Hockey Edition",
  "Laurin & Klement",
]
`;

exports[`дрэг энд дроп при дропе изменить сортировку комплектаций 2`] = `
Array [
  "Hockey Edition",
  "Active",
  "Ambition",
  "Laurin & Klement",
]
`;

exports[`дрэг энд дроп сохранит новую сортировку при переключении страницы 1`] = `
Array [
  "Active",
  "Ambition",
  "Laurin & Klement",
  "Style",
]
`;

exports[`контролы листания если листаем влево, сдвинет страницу влево 1`] = `
Array [
  "Active",
  "Ambition",
  "Hockey Edition",
  "Laurin & Klement",
]
`;

exports[`контролы листания если листаем вправо, сдвинет страницу вправо 1`] = `
Array [
  "Ambition",
  "Hockey Edition",
  "Laurin & Klement",
  "Style",
]
`;

exports[`контролы листания обновляет фильтр "показать только различия" при смене страницы 1`] = `
Array [
  "Антиблокировочная система (ABS)",
]
`;

exports[`листание при дрэг-энд-дропе обновляет фильтр "показать только различия" при смене страницы 1`] = `
Array [
  "Антиблокировочная система (ABS)",
]
`;

exports[`листание при дрэг-энд-дропе после перелистывания будет правильно обновлять порядок элементов 1`] = `
Array [
  "Ambition",
  "Hockey Edition",
  "Laurin & Klement",
  "Style",
]
`;

exports[`листание при дрэг-энд-дропе при задержке над первым элементом перелистнет страницу назад 1`] = `
Array [
  "Active",
  "Style",
  "Ambition",
  "Hockey Edition",
]
`;

exports[`листание при дрэг-энд-дропе при задержке над первым элементом перелистнет страницу назад 2`] = `
Array [
  "Style",
  "Active",
  "Ambition",
  "Hockey Edition",
]
`;

exports[`листание при дрэг-энд-дропе при задержке над последним элементом перелистнет страницу вперед 1`] = `
Array [
  "Ambition",
  "Hockey Edition",
  "Laurin & Klement",
  "Style",
]
`;

exports[`листание при дрэг-энд-дропе при задержке над последним элементом перелистнет страницу вперед 2`] = `
Array [
  "Hockey Edition",
  "Ambition",
  "Laurin & Klement",
  "Style",
]
`;
